@@ -3,12 +3,14 @@ package edu.colorado.phet.buildafraction.view.pictures;
 import java.awt.BasicStroke;
 import java.awt.Color;
 
+import edu.colorado.phet.common.phetcommon.math.Function.LinearFunction;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.common.piccolophet.nodes.kit.ZeroOffsetNode;
 import edu.colorado.phet.common.piccolophet.simsharing.SimSharingDragHandler;
 import edu.colorado.phet.fractionsintro.intro.model.Fraction;
 import edu.umd.cs.piccolo.PNode;
+import edu.umd.cs.piccolo.activities.PInterpolatingActivity;
 import edu.umd.cs.piccolo.event.PInputEvent;
 import edu.umd.cs.piccolo.util.PDimension;
 
@@ -19,24 +21,37 @@ public class RectangularPiece extends PNode {
     private double initialX = Double.NaN;
     private double initialY = Double.NaN;
     private final Integer pieceSize;
+    private double initialScale = Double.NaN;
 
     public RectangularPiece( final Integer pieceSize, final PieceContext context ) {
         this.pieceSize = pieceSize;
-        PNode piece = new ZeroOffsetNode( new PhetPPath( ContainerNode.createRect( pieceSize ), Color.red, new BasicStroke( 1 ), Color.black ) );
+        PNode piece = new ZeroOffsetNode( new PhetPPath( ContainerNode.createRect( pieceSize ), new Color( 255, 0, 0, 213 ), new BasicStroke( 1 ), Color.black ) );
         addInputEventListener( new CursorHandler() );
         addInputEventListener( new SimSharingDragHandler( null, true ) {
+            @Override protected void startDrag( final PInputEvent event ) {
+                super.startDrag( event );
+                final LinearFunction function = new LinearFunction( 0, 1, getScale(), 1.75 );
+                PInterpolatingActivity activity = new PInterpolatingActivity( 200 ) {
+
+                    @Override public void setRelativeTargetValue( final float zeroToOne ) {
+                        setScale( function.evaluate( zeroToOne ) );
+                    }
+                };
+                addActivity( activity );
+            }
+
             @Override protected void drag( final PInputEvent event ) {
+                super.drag( event );
                 final PDimension delta = event.getDeltaRelativeTo( event.getPickedNode().getParent() );
                 translate( delta.width, delta.height );
             }
 
             @Override protected void endDrag( final PInputEvent event ) {
+                super.endDrag( event );
                 context.endDrag( RectangularPiece.this, event );
             }
         } );
         addChild( piece );
-        this.initialX = getXOffset();
-        this.initialY = getYOffset();
     }
 
     public boolean isAtInitialPosition() {
@@ -48,15 +63,17 @@ public class RectangularPiece extends PNode {
         }
     }
 
-    public void setInitialPosition( final double x, final double y ) {
+    public void setInitialState( final double x, final double y, double scale ) {
         this.initialX = x;
         this.initialY = y;
+        this.initialScale = scale;
         setOffset( x, y );
+        setScale( scale );
     }
 
     public Fraction toFraction() {
         return new Fraction( 1, pieceSize );
     }
 
-    public void animateHome() { animateToPositionScaleRotation( initialX, initialY, 1, 0, 200 ); }
+    public void animateHome() { animateToPositionScaleRotation( initialX, initialY, initialScale, 0, 200 ); }
 }
